syntax="proto3";

package content_service;
option go_package ="genproto/content_service";
 

message Empty {
}

message Id {
    string id = 1;
    string timezone = 2;
    string slug = 3;
}

message GetListFilter {
    int32 page = 1;
    int32 limit = 2;
    bool is_deleted = 3;
    repeated Filters filters = 4;
    repeated SortBy sorts = 5;
    map<string, string> extra = 6;
}

message Filters {
    string field = 1;
    string type = 2;
    string value = 3;
}

message SortBy {
    string field = 1;
    string type = 2;
}

message GetListRequest {
    repeated string id = 1;
    repeated string slug = 2;
}